@@ -7,7 +7,7 @@ Curl and libcurl 7.15.3
  Number of public functions in libcurl:    46
  Amount of public web site mirrors:        31
  Number of known libcurl bindings:         32
- Number of contributors:                   474
+ Number of contributors:                   487
 
 This release includes the following changes:
 
